--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 </div>
 
                 <div class="footer__column">
-                    <h4>Menu</h4>
+                    <h4 translate="no">Menu</h4>
                     <menu class="menu">
                         <li><a href="#Home" class="menu__item">Home</a></li>
                         <li><a href="#Projects" class="menu__item">Projects</a></li>
@@ -483,7 +483,7 @@
                 </div>
 
                 <div class="footer__column">
-                    <h4>Info</h4>
+                    <h4 translate="no">Info</h4>
                     <menu class="menu">
                         <li><a href="https://www.behance.net/arisllyy" target="_blank" class="menu__item" translate="no">Behance</a>
                         </li>
