--- a/about.html
+++ b/about.html
@@ -57,21 +57,21 @@
                 </div>
             </div>
 
-            <div class="information__skills">
-                <h3 class="information__headline"><span translate="no">Hard</span> skills</h3>
+            <div class="information__skills" translate="no">
+                <h3 class="information__headline">Hard skills</h3>
                 <div class="information__text">
                     <div class="information__text-column">
                         <p>Web-design</p>
                         <p>Graphic design</p>
-                        <p translate="no">Ui/ux design</p>
+                        <p>Ui/ux design</p>
                         <p>Responsive design</p>
                         <p>Html coding</p>
-                        <p translate="no">Sass, Less, Stylus </p>
+                        <p>Sass, Less, Stylus </p>
                     </div>
 
                     <div class="information__text-column">
                         <p>Typography</p>
-                        <p translate="no">Wireframing </p>
+                        <p>Wireframing </p>
                         <p>Color theory</p>
                         <p>3d modeling (Blender)</p>
                         <p>User Story</p>
