--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <div class="information__languages">
                 <h3 class="information__headline">Languages</h3>
                 <div class="information__text-column">
-                    <p>English (B1)</p>
+                    <p>English (А2-B1)</p>
                     <p>Russian (Native)</p>
                     <p>Belarusian (Native)</p>
                 </div>
