--- a/index.html
+++ b/index.html
@@ -119,6 +119,150 @@
 
                 <div class="work">
                     <div class="work__info">
+                        <p class="work__caption">Parrot House website</p>
+                        <h3 class="work__title">Parrot House</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">
+                                The website is for a parrot house in Minsk that offers various excursions for both
+                                adults and children. To create a fun mood and atmosphere, a soft font combination of
+                                Comic Sans and Miratrix was used. The combination of gentle and pastel tones establishes
+                                the desired color scheme, which is favorable for children. The use of colors like pink,
+                                yellow, blue, and others conveys a cheerful atmosphere.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/196822369/Parrot-House-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Parrot House.png" alt="Parrot House website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">Jazz Bar website</p>
+                        <h3 class="work__title">Harmony</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The website of "Harmony," a jazz bar, is designed in the
+                                brutalism style. Black and white colors, simple fonts, a gray background, and
+                                black-and-white photos convey the aesthetic of the style. The design gives the website a
+                                minimalist and austere look. The black and white elements create contrast and
+                                expressiveness. The atmosphere of "Harmony," the jazz bar, is reflected in the
+                                black-and-white palette and geometric shapes.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/196678155/Brutalism-Jazz-Bar-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a href="https://arina-22.github.io/WebDesign-Site/"
+                                        target="_blank">WebSite <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Brutalism.png" alt="Jazz Bar website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">Jazz Bar website</p>
+                        <h3 class="work__title">Harmony</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The website of "Harmony," a jazz bar, is designed in the
+                                glassmorphism style. Violet, blue, and pink colors were used to create gradients. The
+                                design also incorporates the glass effect, which adds depth and a silky texture to the
+                                interface elements.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/195996151/Glassmorphism-Jazz-Bar-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Glassmorphism.png" alt="Jazz Bar website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">Jazz Bar website</p>
+                        <h3 class="work__title">Harmony</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The website of "Harmony," a jazz bar, is designed in a pop art
+                                style. Bright colors, unusual shapes, and fonts create a unique and memorable visual
+                                identity. Abstract and geometric forms combined with vibrant colors bring dynamism to
+                                the website. The use of fonts with unconventional shapes emphasizes the eccentricity of
+                                the style. The design captures attention with its creative and playful appearance.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/195528743/Pop-Art-Jazz-Bar-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Pop Art.png" alt="Jazz Bar website" class="work__img">
+                </div>
+
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">Jazz Bar website</p>
+                        <h3 class="work__title">Harmony</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The website of "Harmony," a jazz bar, is designed in a vintage
+                                style. It incorporates the necessary colors, photographs, and textures to capture the
+                                atmosphere of the style and jazz. Warm and muted colors create elegance and
+                                sophistication, while textures add a sense of history to the website.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/194991431/Vintage-Jazz-Bar-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Vintage bar.png" alt="Jazz Bar website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
                         <p class="work__caption">Historical website</p>
                         <h3 class="work__title">Time Travel</h3>
 
@@ -142,8 +286,8 @@
                                         target="_blank">Behance
                                         <img src="img/arrow.svg" alt="arrow"></a>
                                 </div>
-                                <div class="work__links-item"><a href="#" target="_blank">GitHub <img
-                                            src="img/arrow.svg" alt="arrow"></a>
+                                <div class="work__links-item"><a href="https://arina-22.github.io/TimeTravel/"
+                                        target="_blank">WebSite <img src="img/arrow.svg" alt="arrow"></a>
                                 </div>
                             </div>
                         </div>
@@ -357,6 +501,38 @@
 
                 <div class="work">
                     <div class="work__info">
+                        <p class="work__caption">Jazz Bar website</p>
+                        <h3 class="work__title">Harmony</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The website of "Harmony," a jazz bar, is designed in the
+                                brutalism style. Black and white colors, simple fonts, a gray background, and
+                                black-and-white photos convey the aesthetic of the style. The design gives the website a
+                                minimalist and austere look. The black and white elements create contrast and
+                                expressiveness. The atmosphere of "Harmony," the jazz bar, is reflected in the
+                                black-and-white palette and geometric shapes.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/196678155/Brutalism-Jazz-Bar-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a href="https://arina-22.github.io/WebDesign-Site/"
+                                        target="_blank">WebSite <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/Brutalism.png" alt="Jazz Bar website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
                         <p class="work__caption">Website mainpage</p>
                         <h3 class="work__title">Time Travel</h3>
 
@@ -379,8 +555,8 @@
                                         target="_blank">Behance
                                         <img src="img/arrow.svg" alt="arrow"></a>
                                 </div>
-                                <div class="work__links-item"><a href="#" target="_blank">GitHub <img
-                                            src="img/arrow.svg" alt="arrow"></a>
+                                <div class="work__links-item"><a href="https://arina-22.github.io/TimeTravel/"
+                                        target="_blank">WebSite <img src="img/arrow.svg" alt="arrow"></a>
                                 </div>
                             </div>
                         </div>
@@ -485,9 +661,11 @@
                 <div class="footer__column">
                     <h4 translate="no">Info</h4>
                     <menu class="menu">
-                        <li><a href="https://www.behance.net/arisllyy" target="_blank" class="menu__item" translate="no">Behance</a>
+                        <li><a href="https://www.behance.net/arisllyy" target="_blank" class="menu__item"
+                                translate="no">Behance</a>
                         </li>
-                        <li><a href="https://t.me/arisllyy" class="menu__item" target="_blank" translate="no">Telegram</a></li>
+                        <li><a href="https://t.me/arisllyy" class="menu__item" target="_blank"
+                                translate="no">Telegram</a></li>
                         <li><a href="mailto:arina.bst@mail.ru" class="menu__item" target="_blank">E-mail</a></li>
                     </menu>
                 </div>
