--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
     <section class="main">
         <div class="container">
-            <img src="img/author2.webp" alt="Arina Bestemianikova, web-designer" class="main__author">
+            <img src="img/author2.webp" alt="Arina Bestemianikova, web-designer" class="main__author" style="object-fit: cover;">
  
             <div class="main__content">
                 <h1 class="main__first-headline" translate="no">Hi, <br> I’m <br class="br"> Arina</h1>
@@ -40,6 +40,19 @@
                     I strive to become an expert in stunning web design. I am constantly honing my skills. I aspire to
                     be part of a cohesive and driven team where I can fully unleash my potential. My goal is to be a
                     creative and successful web designer, making a contribution to the future of web design.</p>
+            </div>
+
+            <div class="information__education">
+                <h3 class="information__headline">Work Experience</h3>
+                <div class="information__text">
+                    <div class="information__text-column">
+                        <p>Marketing Agency "AIRBrand", Web-designer</p>
+                        <span>I have been involved in designing website layouts, logos, and Instagram profile layouts.</span>
+                    </div>
+                    <div class="information__text-column">
+                        <p>May - Nov 2024</p>
+                    </div>
+                </div>
             </div>
 
             <div class="information__education">
