--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                         </div>
                     </div>
 
-                    <img src="img/author1.webp" alt="Arina Bestemianikova, web-designer" class="frontpage__author">
+                    <img src="img/author1.jpg" alt="Arina Bestemianikova, web-designer" class="frontpage__author" 
+                    style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -116,6 +117,61 @@
             <div class="web-design" id="web">
                 <h2>LATEST <span>Works</span></h2>
                 <h3>WEB DESIGN</h3>
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">DJ website</p>
+                        <h3 class="work__title">DJ Anton</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">
+                                A website for a DJ from Minsk. The site design features a dark background that creates
+                                the atmosphere of a nightclub, while the accent green color adds brightness and
+                                dynamism. Rotating ellipses and a noise effect give the page uniqueness and depth.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a href="https://djnovikau.by/" target="_blank">Website
+                                        <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/218107607/DJ-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/dj.png" alt="DJ website" class="work__img">
+                </div>
+
+                <div class="work">
+                    <div class="work__info">
+                        <p class="work__caption">Yacht Club website</p>
+                        <h3 class="work__title">La Vague Maritime</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">In the course of the "UX/UI Design" discipline, interactive
+                                prototypes and design layouts have been developed for the yacht club website.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/217928259/Yacht-Club-Website"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/yacht.png" alt="Yacht website" class="work__img">
+                </div>
 
                 <div class="work">
                     <div class="work__info">
@@ -358,6 +414,35 @@
                     <img src="img/calendar2.webp" alt="Calendar" class="work__second-img">
                 </div>
 
+                <div class="work work-calendar">
+                    <div class="work__info">
+                        <h3 class="work__title">Tea company branding</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">"Verdessa" is a tea company. Each product under the brand is
+                                made from natural ingredients without artificial additives and flavorings. The company's
+                                branding reflects its values and mission. The name "Verdessa" is derived from the word
+                                "verdant," which means "green" or "lush in vegetation."
+
+                                This work was completed as part of a course project.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/201606775/Brand-Identity-Verdessa"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/image.webp" alt="Business card" class="work__second-img">
+                    <img src="img/Стаканчик.webp" alt="Paper cup" class="work__first-img">
+                </div>
+
                 <div class="work work-postcard">
                     <div class="work__info">
                         <h3 class="work__title">New Year postcard</h3>
@@ -569,6 +654,32 @@
             <div class="modeling" id="modeling">
                 <h2>LATEST <span>Works</span></h2>
                 <h3>3D MODELING</h3>
+
+                <div class="work work-castle">
+                    <div class="work__info">
+                        <p class="work__caption">3D dron</p>
+                        <h3 class="work__title">Dron Asman</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">The visualization of the Asman drone was created in Maya. The
+                                work was done during a business trip to the Intellectual Scientific and Technical Center
+                                "Valdai" in Veliky Novgorod, Russia.
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.behance.net/gallery/217929747/Drone-Asman-3D"
+                                        target="_blank">Behance <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/a2.jpg" alt="Dron" class="work__img">
+                </div>
 
                 <div class="work work-headphones">
                     <div class="work__info">
