--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         </div>
                     </div>
 
-                    <img src="img/author1.jpg" alt="Arina Bestemianikova, web-designer" class="frontpage__author" 
-                    style="object-fit: cover;">
+                    <img src="img/author1.jpg" alt="Arina Bestemianikova, web-designer" class="frontpage__author"
+                        style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -100,13 +100,16 @@
                     <a href="#web" class="services__link"><span>01</span>Web-design</a>
                 </li>
                 <li class="services__item">
-                    <a href="#graphic-design" class="services__link"><span>02</span>Graphic design</a>
+                    <a href="#social-media" class="services__link"><span>02</span>Social media design</a>
                 </li>
                 <li class="services__item">
-                    <a href="#html-coding" class="services__link"><span>03</span>Html coding</a>
+                    <a href="#graphic-design" class="services__link"><span>03</span>Graphic design</a>
                 </li>
                 <li class="services__item">
-                    <a href="#modeling" class="services__link"><span>04</span>3D modeling</a>
+                    <a href="#html-coding" class="services__link"><span>04</span>Html coding</a>
+                </li>
+                <li class="services__item">
+                    <a href="#modeling" class="services__link"><span>05</span>3D modeling</a>
                 </li>
             </ul>
         </div>
@@ -379,6 +382,38 @@
                     </div>
 
                     <img src="img/BSTU.webp" alt="University Website" class="work__img">
+                </div>
+            </div>
+
+            
+            <div class="graphic-design" id="social-media">
+                <h2>LATEST <span>Works</span></h2>
+                <h3>SOCIAL MEDIA DESIGN</h3>
+
+                <div class="work work-calendar">
+                    <div class="work__info">
+                        <h3 class="work__title">i-Store Instagram</h3>
+
+                        <div class="work__text">
+                            <p class="work__description">Creation of advertising materials and design, in accordance
+                                with the requirements of the international brand book, for the Instagram account of the
+                                premium Apple technology store chain - i-Store (Belarus).
+                            </p>
+
+                            <div class="work__links">
+                                <div class="work__links-item"><a href="about.html" target="_blank">About me <img
+                                            src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                                <div class="work__links-item"><a
+                                        href="https://www.instagram.com/istoreby/"
+                                        target="_blank">i-Store <img src="img/arrow.svg" alt="arrow"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img src="img/istore2.jpg" alt="istore" class="work__first-img">
+                    <img src="img/istore1.jpg" alt="istore" class="work__second-img">
                 </div>
             </div>
 
